# MathLibrary

./: .gitignore  CMakeLists.txt  Math.cpp  Math.sln  Math.vcxproj  Math.vcxproj.filters  README.md
src/: Shapes2D.cpp  Shapes2D.h  Shapes3D.cpp  Shapes3D.h
src/Core/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
